# urza

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
scripts/: start_stdio.py
src/urza/: brew.py  collection.py  server.py  sessions.py  synergy.py  synergy_graph.py
tests/: test_collection.py  test_synergy.py
