[project]
name = "urza"
version = "0.1.0"
description = "Commander-first Magic: The Gathering capapp — wraps j4th/mtg-mcp-server with collection-aware brewing, deck sessions, and synergy scoring."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Adam Steen" }]
keywords = ["mtg", "magic-the-gathering", "mcp", "commander", "edh", "ai", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "mtg-mcp-server>=3.0.0",
    "fastmcp>=3.2.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
urza = "urza.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/urza"]
